Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-34616

Android: selected text in QTextEdit disappears

XMLWordPrintable

    • Android
    • de5ae6917c819ff23f7d9c5742b50b15e0824877, a03a69efb9ed89cd4a90878eda203df62a1c95d9

      Selecting text multiple times when the software keyboard is shown causes the selected text to be deleted. Reproducible using the textedit example with the Android 4.3 stock keyboard.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            stromme Christian
            tvete Paul Olav Tvete
            Votes:
            3 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes